--- a/package.json
+++ b/package.json
@@ -29,8 +29,6 @@
         "cordova-android": "^6.3.0",
         "cordova-ios": "^4.4.0",
         "cordova-plugin-device": "^1.1.4",
-        "cordova-plugin-googlemaps": "git+https://github.com/mapsplugin/cordova-plugin-googlemaps.git",
-        "cordova-plugin-googlemaps-sdk": "git+https://github.com/mapsplugin/cordova-plugin-googlemaps-sdk.git",
         "cordova-plugin-splashscreen": "^4.0.3",
         "cordova-plugin-statusbar": "^2.2.2",
         "cordova-plugin-whitelist": "^1.3.1",
@@ -40,7 +38,8 @@
         "ionicons": "3.0.0",
         "rxjs": "5.4.3",
         "sw-toolbox": "3.6.0",
-        "zone.js": "0.8.18"
+        "zone.js": "0.8.18",
+        "cordova-plugin-googlemaps": "git+https://github.com/mapsplugin/cordova-plugin-googlemaps.git"
     },
     "devDependencies": {
         "@ionic/app-scripts": "3.0.0",
@@ -49,14 +48,14 @@
     "description": "An Ionic project",
     "cordova": {
         "plugins": {
-            "cordova-plugin-googlemaps": {
-                "API_KEY_FOR_IOS": "AIzaSyCi0YP7zrhOEdkqMfxzvb6sOqHy_XIPHjQ"
-            },
             "cordova-plugin-device": {},
             "cordova-plugin-splashscreen": {},
             "cordova-plugin-statusbar": {},
             "cordova-plugin-whitelist": {},
-            "ionic-plugin-keyboard": {}
+            "ionic-plugin-keyboard": {},
+            "cordova-plugin-googlemaps": {
+                "API_KEY_FOR_IOS": "AIzaSyCi0YP7zrhOEdkqMfxzvb6sOqHy_XIPHjQ"
+            }
         },
         "platforms": [
             "ios"
