--- a/package.json
+++ b/package.json
@@ -26,13 +26,11 @@
         "@ionic-native/status-bar": "4.3.0",
         "@ionic/storage": "2.0.1",
         "@types/google-maps": "^3.2.0",
+        "cordova-android": "^6.2.3",
         "cordova-ios": "^4.4.0",
-        "cordova-plugin-device": "^1.1.4",
-        "cordova-plugin-googlemaps": "git+https://github.com/mapsplugin/cordova-plugin-googlemaps.git",
         "cordova-plugin-googlemaps-sdk": "git+https://github.com/mapsplugin/cordova-plugin-googlemaps-sdk.git",
         "cordova-plugin-splashscreen": "^4.0.3",
-        "cordova-plugin-statusbar": "^2.2.2",
-        "cordova-plugin-whitelist": "^1.3.1",
+        "cordova-plugin-statusbar": "^2.2.3",
         "ionic": "^3.12.0",
         "ionic-angular": "3.7.1",
         "ionic-plugin-keyboard": "^2.2.1",
@@ -48,16 +46,12 @@
     "description": "An Ionic project",
     "cordova": {
         "plugins": {
-            "cordova-plugin-googlemaps": {
-                "API_KEY_FOR_IOS": "AIzaSyCi0YP7zrhOEdkqMfxzvb6sOqHy_XIPHjQ"
-            },
-            "cordova-plugin-device": {},
             "cordova-plugin-splashscreen": {},
             "cordova-plugin-statusbar": {},
-            "cordova-plugin-whitelist": {},
             "ionic-plugin-keyboard": {}
         },
         "platforms": [
+            "android",
             "ios"
         ]
     }
