--- a/package.json
+++ b/package.json
@@ -28,9 +28,9 @@
         "@types/google-maps": "^3.2.0",
         "cordova-android": "^6.3.0",
         "cordova-ios": "^4.4.0",
-        "cordova-plugin-device": "^1.1.4",
         "cordova-plugin-splashscreen": "^4.0.3",
         "cordova-plugin-statusbar": "^2.2.3",
+        "cordova-plugin-whitelist": "^1.3.2",
         "ionic": "^3.12.0",
         "ionic-angular": "3.7.1",
         "ionic-plugin-keyboard": "^2.2.1",
@@ -46,14 +46,10 @@
     "description": "An Ionic project",
     "cordova": {
         "plugins": {
-            "cordova-plugin-device": {},
             "cordova-plugin-splashscreen": {},
             "cordova-plugin-statusbar": {},
-            "cordova-plugin-whitelist": {},
             "ionic-plugin-keyboard": {},
-            "cordova-plugin-googlemaps": {
-                "API_KEY_FOR_IOS": "AIzaSyCi0YP7zrhOEdkqMfxzvb6sOqHy_XIPHjQ"
-            }
+            "cordova-plugin-whitelist": {}
         },
         "platforms": [
             "android",
