--- a/package.json
+++ b/package.json
@@ -21,17 +21,15 @@
         "@angular/platform-browser": "4.4.3",
         "@angular/platform-browser-dynamic": "4.4.3",
         "@ionic-native/core": "4.3.0",
-        "@ionic-native/google-maps": "^4.3.0",
         "@ionic-native/splash-screen": "4.3.0",
         "@ionic-native/status-bar": "4.3.0",
         "@ionic/storage": "2.0.1",
         "@types/google-maps": "^3.2.0",
         "cordova-android": "^6.3.0",
-        "cordova-ios": "^4.4.0",
+        "cordova-ios": "^4.5.1",
         "cordova-plugin-splashscreen": "^4.0.3",
         "cordova-plugin-statusbar": "^2.2.3",
         "cordova-plugin-whitelist": "^1.3.2",
-        "ionic": "^3.12.0",
         "ionic-angular": "3.7.1",
         "ionic-plugin-keyboard": "^2.2.1",
         "ionicons": "3.0.0",
@@ -41,6 +39,7 @@
     },
     "devDependencies": {
         "@ionic/app-scripts": "3.0.0",
+        "ionic": "3.13.0",
         "typescript": "2.3.4"
     },
     "description": "An Ionic project",
