--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@types/google-maps": "^3.2.0",
     "cordova-android": "^6.3.0",
     "cordova-ios": "^4.5.1",
+    "cordova-plugin-ionic-webview": "^1.1.15",
     "cordova-plugin-splashscreen": "^4.0.3",
     "cordova-plugin-statusbar": "^2.2.3",
     "cordova-plugin-whitelist": "^1.3.2",
@@ -48,7 +49,8 @@
       "cordova-plugin-splashscreen": {},
       "cordova-plugin-statusbar": {},
       "ionic-plugin-keyboard": {},
-      "cordova-plugin-whitelist": {}
+      "cordova-plugin-whitelist": {},
+      "cordova-plugin-ionic-webview": {}
     },
     "platforms": [
       "android",
@@ -56,4 +58,3 @@
     ]
   }
 }
-
